[tool.poetry]
name = "nemlig"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api" },
    { include = "robot" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
setuptools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
